# plover-mouse

./: README.md  areaOfScreen.py  mouse.json  mouse.py  setup.cfg
