[metadata]
name = plover_mouse
version = 1.0.0
description = Plover plugin for controlling the mouse with steno
long_description = file:README.md
long_description_content_type = text/markdown
author = Emily Easteal
author_email = emily@easteal.dev
url = https://github.com/EPLHREU/plover-mouse
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
install_requires =
  pyautogui
py_modules =
  plover_mouse

[options.entry_points]
plover.command =
 mouse_click = mouse:click
 mouse_move = mouse:move
 mouse_set = mouse:set
 mouse_scroll = mouse:scroll
 mouse_up = mouse:up
 mouse_down = mouse:down
